Call Editor::readConfig() with KGlobal::config() as parameter only once

BUG: 308657